--- a/css/scroll_snapping.css
+++ b/css/scroll_snapping.css
@@ -39,8 +39,13 @@ h2.section-title {
 }
 
 .section-text {
-  font-size: 1.125rem;
-  font-size: 1.5625rem;
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+.intro-text {
+  max-width: 800px;
+  margin: 0 auto;
 }
 
 .top-title {
@@ -48,7 +53,18 @@ h2.section-title {
   line-height: 2rem;
   font-weight: 300;
   margin-bottom: 11.25px;
-  color: #5AC9E7;
+}
+
+.top-section-text {
+  position: absolute;
+  color: #fff;
+  text-align: center;
+  bottom: 80px;
+  width: 100%;
+}
+
+.top-section-text p {
+  margin-bottom: 0;
 }
 
 .bar {
@@ -58,7 +74,7 @@ h2.section-title {
 }
 
 .wrap {
-  padding: 0px 15px 90px 15px;
+  padding: 0px 15px 0px 15px;
   width: 1170px;
   margin: 0 auto;
   height: 100%;
@@ -73,6 +89,15 @@ h2.section-title {
 .section {
   height: 100vh;
   overflow: hidden;
+}
+
+.section.top {
+  background: #000;
+  position: relative;
+}
+
+.section.top img {
+  opacity: 0.5;
 }
 
 .section.white {
@@ -95,8 +120,31 @@ h2.section-title {
   color: #fff;
 }
 
-.text-wrap {
+.section.main .text-wrap {
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+}
+
+.down-arrow {
+  border: solid #fff;
+  border-width: 0 4px 4px 0;
+  display: inline-block;
+  padding: 12px;
+  margin-top: 40px;
+ -moz-animation: bounce 2s infinite;
+  -webkit-animation: bounce 2s infinite;
+  animation: bounce 2s infinite;
+}
+
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateY(0) rotate(45deg);
+  }
+  40% {
+    transform: translateY(-30px) rotate(45deg);
+  }
+  60% {
+    transform: translateY(-15px) rotate(45deg);
+  }
 }
