--- a/css/scroll_snapping.css
+++ b/css/scroll_snapping.css
@@ -5,11 +5,6 @@ body {
   color: #343F49;
 }
 
-html, body {
-  height: 100vh;
-  overflow: hidden;
-}
-
 * {
   box-sizing: border-box;
 }
@@ -41,6 +36,33 @@ h2.section-title {
   margin-top: 11.25px;
   margin-bottom: 0;
   color: #343F49;
+}
+
+.story.top {
+  background: #000;
+  position: relative;
+}
+
+.story.top::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.5);
+  content: "";
+}
+
+.story.top .image-wrap {
+  background-image: url('../images/bb_numbers_header.jpg');
+  background-size: cover!important;
+  background-attachment: fixed;
+  background-position: 50%;
+  background-repeat: no-repeat;
+  height: 100%;
+  width: 100%;
 }
 
 .section-text {
@@ -92,11 +114,16 @@ h2.section-title {
 }
 
 .story-wrap {
-  /*height: 100vh;*/
+  height: 100vh;
+  overflow: scroll;
+  scroll-snap-type: y mandatory;
+  scroll-snap-points-y: repeat(100vh);
 }
 
 .story {
   height: 100vh;
+  scroll-snap-align: start;
+  position: relative;
 }
 
 .story .image {
@@ -157,65 +184,8 @@ h2.section-title {
   }
 }
 
-.image-section {
-  margin-top: 0;
+.chart-section {
+  padding: 10vh 0;
   position: relative;
-}
-
-.image-section.header {
-  transition: opacity 1s,visibility 1s 1s;
-}
-
-.image-section .image-wrap {
-  min-height: 120vh;
-  width: 90%;
-  max-width: 140vh;
-  margin-left: auto;
-  margin-right: auto;
-  z-index: 0;
-  opacity: 0;
-  visibility: hidden;
-  position: relative;
-}
-
-.image-section .image-wrap.fade-out {
-  transition: opacity 1s, visibility 1s 0s;
-}
-
-.image-section .image-wrap .image {
-  position: fixed;
-  width: auto;
-  height: auto;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
-}
-
-.image-section .image-wrap .image img {
-  opacity: 0.5;
-  -o-object-fit: cover;
-  object-fit: cover;
-  width: 100% !important;
-  height: 100% !important;
-  -webkit-transform: scale(1, 1);
-  transform: scale(1, 1);
-  transition: -webkit-transform 1s,opacity 1s;
-  transition: transform 1s,opacity 1s;
-  display: block;
-}
-
-.image-section.inviewport .image-wrap {
-  opacity: 1;
-  visibility: visible;
+  z-index: 900;
 }
